tests/parser/parse-expression.1.bad.error
error: Malformed expression
  --> test:4:10
   |
 4 |  (define x ())
   |            ^^ unexpected `nil` or `()`
